--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: default
 
     init({
       el: '#waline',
-      serverURL: 'https://vercel.crazyhan.tk',
+      serverURL: 'https://vercel.crazyhan.top',
     });
   </script>
 </body>
