--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 <p>{{ site.footer-text }}</p>
 {% endif %}
 
-<link rel="stylesheet" href=APlayer.min.css>
-    <script src=Aplayer.min.js></script>
+<link rel="stylesheet" href='https://raw.githubusercontent.com/hanlinniao/hanlinniao.github.io/master/_includes/APlayer.min.css'>
+    <script src='https://raw.githubusercontent.com/hanlinniao/hanlinniao.github.io/master/_includes/APlayer.min.js'></script>
       <div id='aplayer'></div><script>
     var ap = new APlayer
     ({
